--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <a href='about.html'>reglement</a>
     </li>
     <li class='menu-item'>
-      <a href=over.html>over</a>
+      <a href='over.html'>over</a>
     </li>
     <li class='menu-item'>
       <a href='contact.html'>contact</a>
