--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <a href='about.html'>reglement</a>
     </li>
     <li class='menu-item'>
-      <a href='over.html'>over</a>
+      <a href='over/over.html'>over</a>
     </li>
     <li class='menu-item'>
       <a href='contact.html'>contact</a>
@@ -37,7 +37,7 @@
 <footer>
   <p>
     Made by
-    <a href='facebook.com/ioreoz' target='_blank'>Nathan Vandeweghe</a>
+    <a href='www.facebook.com/ioreoz' target='_blank'>Nathan Vandeweghe</a>
   </p>
 </footer>
   
