--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <main>
   <ul class='menu'>
     <li class='menu-item'>
-      <a href='home.html'>home</a>
+      <a href='index.html'>home</a>
     </li>
     <li class='active menu-item'>
       <a href='gallery.html'>straffen</a>
