--- a/over/over.html
+++ b/over/over.html
@@ -2,7 +2,7 @@
 <html >
 <head>
   <meta charset="UTF-8">
-  <title>Work experience</title>
+  <title>Mijn leven</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
   <link rel='stylesheet prefetch' href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,900&amp'>
